--- a/app/src/main/res/layout/product_detail_fragment_real.xml
+++ b/app/src/main/res/layout/product_detail_fragment_real.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,280 +8,148 @@
     android:fitsSystemWindows="true"
     tools:context=".presentation.fragments.product.ProductDetailFragment">
 
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        >
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+                <ViewFlipper
+                    android:id="@+id/vf_product_detail_desc"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <com.facebook.shimmer.ShimmerFrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <include layout="@layout/layout_skeleton_product_detail_description"/>
+
+                    </com.facebook.shimmer.ShimmerFrameLayout>
+
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_product_detail_expandable"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_8sdp"
+                        android:layout_marginEnd="@dimen/_8sdp"
+                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                        app:spanCount="1"
+                        tools:itemCount="5"
+                        tools:listitem="@layout/item_detail_product_expand"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_description"/>
+
+
+                </ViewFlipper>
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+        </androidx.core.widget.NestedScrollView>
+
+
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/search_action_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/blue_0063a7"
+
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/iv_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/icon_back"
+                app:tint="@color/white"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/iv_share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_share"
+
+                android:layout_marginEnd="@dimen/_10sdp"
+
+                app:layout_constraintEnd_toStartOf="@+id/iv_cart"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/iv_cart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_cart"
+
+                android:layout_marginEnd="@dimen/_10sdp"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.appbar.MaterialToolbar>
+
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:weightSum="6"
+        android:paddingStart="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_10sdp"
+        android:layout_gravity="bottom"
+        android:background="@color/white">
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/search_action_bar"
-            android:layout_width="match_parent"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_price"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/blue_0063a7"
+            android:text="@string/final_price"
+            android:layout_weight="5"
+            android:layout_marginEnd="@dimen/_10sdp"/>
 
-            app:layout_constraintTop_toTopOf="parent">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/iv_back"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/icon_back"
-                    app:tint="@color/white"
-
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/iv_share"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_share"
-
-                    android:layout_marginEnd="@dimen/_10sdp"
-
-                    app:layout_constraintEnd_toStartOf="@+id/iv_cart"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/iv_cart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_cart"
-
-                    android:layout_marginEnd="@dimen/_10sdp"
-
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </com.google.android.material.appbar.MaterialToolbar>
-
-        <ViewFlipper
-            android:id="@+id/vf_product_detail_desc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <com.facebook.shimmer.ShimmerFrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <include layout="@layout/layout_skeleton_product_detail_description"/>
-
-            </com.facebook.shimmer.ShimmerFrameLayout>
-
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/search_action_bar"
-                >
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/iv_product"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/tour_backpacker_mandalika"
-
-                    android:scaleType="fitXY"
-                    app:layout_constraintTop_toTopOf="parent"/>
-
-
-                <TextView
-                    android:id="@+id/tv_product_promo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/promo"
-                    android:textColor="@color/white"
-                    style="@style/Text.Medium.Bold"
-                    android:background="@color/red"
-                    android:paddingStart="@dimen/_15sdp"
-                    android:paddingEnd="@dimen/_15sdp"
-                    android:paddingTop="@dimen/_5sdp"
-                    android:paddingBottom="@dimen/_5sdp"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    app:layout_constraintTop_toBottomOf="@+id/iv_product"
-                    app:layout_constraintStart_toStartOf="parent"/>
-
-                <TextView
-                    android:id="@+id/tv_detail_category_product"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/promo"
-                    android:textColor="@color/gray.primary"
-                    style="@style/Text.Medium.Bold"
-
-
-                    app:layout_constraintTop_toTopOf="@+id/tv_product_promo"
-                    app:layout_constraintBottom_toBottomOf="@+id/tv_product_promo"
-                    app:layout_constraintStart_toEndOf="@+id/tv_product_promo"
-                    android:layout_marginStart="@dimen/_10sdp"/>
-
-                <TextView
-                    android:id="@+id/tv_detail_product"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/promo"
-                    style="@style/Text.Medium.Bold"
-
-                    android:layout_marginTop="@dimen/_5sdp"
-                    android:layout_marginStart="@dimen/_10sdp"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_product_promo"
-                    app:layout_constraintStart_toStartOf="parent"/>
-
-                <TextView
-                    android:id="@+id/tv_detail_product_location"
-                    style="@style/Text.Small.Medium"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Location"
-
-                    android:layout_marginTop="@dimen/_5sdp"
-                    android:layout_marginStart="@dimen/_10sdp"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_product"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:drawableStartCompat="@drawable/ic_map" />
-
-                <TextView
-                    android:id="@+id/tv_detail_product_rating"
-                    style="@style/Text.Small.Medium"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="4.6"
-                    android:textColor="@color/star_color"
-
-                    android:layout_marginTop="@dimen/_5sdp"
-                    android:layout_marginStart="@dimen/_10sdp"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_location"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:drawableStartCompat="@drawable/ic_rating_star" />
-
-                <TextView
-                    android:id="@+id/tv_detail_product_reviews"
-                    style="@style/Text.Small.Medium"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/gray.primary_dark"
-
-                    android:layout_marginTop="@dimen/_5sdp"
-                    android:layout_marginStart="@dimen/_10sdp"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_location"
-                    app:layout_constraintStart_toEndOf="@+id/tv_detail_product_rating" />
-
-                <TextView
-                    android:id="@+id/tv_detail_product_favorit"
-                    style="@style/Text.Small.Medium"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:background="@drawable/ic_favorite"
-                    android:textColor="@color/gray.primary_dark"
-
-                    android:layout_marginTop="@dimen/_5sdp"
-                    android:layout_marginEnd="@dimen/_10sdp"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_location"
-                    app:layout_constraintEnd_toEndOf="parent" />
-
-                <TextView
-                    android:id="@+id/tv_description"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/description"
-                    style="@style/Text.Large"
-
-                    android:layout_marginTop="@dimen/_5sdp"
-                    android:layout_marginStart="@dimen/_10sdp"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_rating"
-                    app:layout_constraintStart_toStartOf="parent"/>
-
-                <TextView
-                    android:id="@+id/tv_detail_product_description"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/promo"
-                    style="@style/Text.Medium"
-
-                    android:layout_marginTop="@dimen/_5sdp"
-                    android:layout_marginStart="@dimen/_10sdp"
-                    android:layout_marginEnd="@dimen/_10sdp"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_description"
-                    app:layout_constraintStart_toStartOf="parent"/>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_product_detail_expandable"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_8sdp"
-                    android:layout_marginEnd="@dimen/_8sdp"
-                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                    app:spanCount="1"
-                    tools:itemCount="5"
-                    tools:listitem="@layout/item_detail_product_expand"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_description"/>
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </ViewFlipper>
-
-
-        <ViewFlipper
-            android:id="@+id/vf_product_expandable_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        <com.facebook.shimmer.ShimmerFrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <include layout="@layout/layout_skeleton_detail_product_expand"/>
-
-        </com.facebook.shimmer.ShimmerFrameLayout>
-
-
-        </ViewFlipper>
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
+        <Button
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="6"
-            android:paddingStart="@dimen/_10sdp"
-            android:paddingEnd="@dimen/_10sdp">
+            android:text="@string/pesan_sekarang"
+            style="@style/Button.Filled.Yellow.Rounded"
+            android:layout_weight="1"
+            android:layout_marginEnd="@dimen/_10sdp"
+            />
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tv_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/final_price"
-                android:layout_weight="5"
-                android:layout_marginEnd="@dimen/_10sdp"/>
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/pesan_sekarang"
-                style="@style/Button.Filled.Yellow.Rounded"
-                android:layout_weight="1"
-                android:layout_marginEnd="@dimen/_10sdp"
-                />
-
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_add_cart"
-                android:background="@color/yellow_ffa216"
-                style="@style/Button.Filled.Yellow.Rounded"
-                android:layout_weight="1"/>
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_add_cart"
+            android:background="@color/yellow_ffa216"
+            style="@style/Button.Filled.Yellow.Rounded"
+            android:layout_weight="1"/>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-</androidx.core.widget.NestedScrollView>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
