--- a/app/src/main/res/layout/item_detail_product_expand.xml
+++ b/app/src/main/res/layout/item_detail_product_expand.xml
@@ -146,18 +146,10 @@
                     android:paddingStart="@dimen/_10sdp"
                     android:paddingEnd="@dimen/_10sdp"
                     android:paddingBottom="@dimen/_15sdp"
-                    android:visibility="gone"
                     app:layout_constraintTop_toBottomOf="@+id/ll_expandable"
                     android:layout_marginTop="@dimen/_2sdp">
 
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/tv_isi_rencana_perjalanan"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Dilaksanakan mulai februari-agustus"
-                        android:textColor="@color/blue_0063a7"
-                        style="@style/Text.Small"/>
-
+                    <include android:id="@+id/ly_schedules" layout="@layout/layout_product_detail_schedules"/>
                 </androidx.appcompat.widget.LinearLayoutCompat>
             </androidx.cardview.widget.CardView>
 
@@ -193,7 +185,7 @@
                     android:id="@+id/tv_include"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/include"
+                    android:text="@string/include_exclude"
                     style="@style/Text.Small.Bold"
                     android:textColor="@color/black"
 
@@ -228,11 +220,8 @@
                 app:layout_constraintTop_toBottomOf="@+id/ll_expandable"
                 android:layout_marginTop="@dimen/_2sdp">
 
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:id="@+id/ll_isi_include"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"/>
+
+                <include android:id="@+id/ly_product_detail_include" layout="@layout/layout_common_product_detail_expand"/>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -386,11 +375,7 @@
             app:layout_constraintTop_toBottomOf="@+id/ll_expandable"
             android:layout_marginTop="@dimen/_2sdp">
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/ll_isi_fasilitas_layanan"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"/>
+            <include android:id="@+id/ly_fasilitas_layanan" layout="@layout/layout_common_product_detail_expand"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
