--- a/app/src/main/res/layout/item_detail_product_expand.xml
+++ b/app/src/main/res/layout/item_detail_product_expand.xml
@@ -143,6 +143,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:background="@drawable/half_rounded_card"
+                    android:visibility="gone"
                     android:paddingStart="@dimen/_10sdp"
                     android:paddingEnd="@dimen/_10sdp"
                     android:paddingBottom="@dimen/_15sdp"
@@ -447,13 +448,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ll_expandable"
         android:layout_marginTop="@dimen/_2sdp">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/ll_isi_faq"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
+        <include android:id="@+id/ly_product_detail_faq" layout="@layout/layout_product_detail_faqs"/>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
